<resources>
    <string name="app_name">Bitcoin/Ethereum</string>
    <string name="click_text">START</string>

    <string name="test_ad" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-3517746418699749/3549332544</string>
    <string name="ad_unit_id1" translatable="false">ca-app-pub-3517746418699749/8196020533</string>
    <string name="ad_unit_id2" translatable="false">ca-app-pub-3517746418699749/1747104209</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3517746418699749~7280583326</string>
    <string name="admob_interstitial_ad1" translatable="false">ca-app-pub-3517746418699749/2108150569</string>
    <string name="admob_interstetial_ad" translatable="false">ca-app-pub-3517746418699749/8344708392</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="about"> <b>  Bitcoin/Ethereum Tracker and converter Android App tracks Bitcoin and Ethereum Exchange prices in realtime and displays the price results in $ and your desired local currency. \n
        Bitcoin and Ethereum App also allows you to convert Bitcoin and Ethereum exchange price to your desired local currency based on the current standard exchange price at that time.\n  Allow notification to always received realtime alerts on increase of Bitcoin and Ethereum prices. \n If you wish to add a country local currency or if your country\'s local currency exchange price is not listed, \n please do send us a feedback with your country name and local currency name and we will add it. \n Help n how to convert
    BTC and ETH Offline without data connection \n
        (1). Enter a value of 1 BTC/ETH in US$ (A default value has been presented) \n
        (2). The default value is from previous Exchange price loaded \n
        (3). Enter the amount of BTC/ETH you want to convert \n
        (4). Select Bitcoin if you are converting for Bitcoin or Ethereum for Conversion in Ethereum \n
        (5). Select Calculate BTC for Bitcoin or Calculate ETH for Ethereum and your conversion is complete (Ensure you select Bitcoin or Ethereum Before conversion) \n
        (6). Select your desire currency</b></string>

    <string name="notifications_allow">
        Allow Notifications For Daily Bitcoin/Ethereum Prices?
    </string>
    <string name="settings_saved">Settings Saved</string>
    <string name="rate">Rate</string>
    <string name="retriving">Retrieving Latest BTC/ETH Exchange Price</string>
    <string name="wait">Please wait....</string>
    <string name="exitApplication">Exit Application?</string>
    <string name="googleplaystore">Rate us on Googleplaystore!</string>
    <string name="exit">Exit</string>
    <string name="click_help">Click Help to learn more</string>
    <string name="help_short">Help</string>
    <string name="can_now_convert">You can now convert BTC/ETH offline without data connection</string>
    <string name="swipe_down">Swipe down to Refresh</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="offline_title">
        Converting Bitcoin/Ethereum Offline Help
    </string>
    <string name="offline_help">
        (1). Enter a value of 1 BTC/ETH in US$ (A default value has been presented) \n
        (2). The default value is from previous Exchange price loaded \n
        (3). Enter the amount of BTC/ETH you want to convert \n
        (4). Select Bitcoin if you are converting for Bitcoin or Ethereum for Conversion in Ethereum \n
        (5). Select Calculate BTC for Bitcoin or Calculate ETH for Ethereum and your conversion is complete (Ensure you select Bitcoin or Ethereum Before conversion) \n
        (6). Select your desire currency \n
    </string>
    <string name="start_conversion_below">Start Conversion below</string>
    <string name="_1_btc" translatable="false">1 BTC ($):</string>
    <string name="no_connection_found">No Connection Found</string>
    <string name="your_connection_to_the_wireless_network_is_turned_off_restore_your_connections_and_swipe_down_to_refresh">Your connection to the wireless network is turned off. Restore your connections and swipe down to refresh</string>
    <string name="convert_offline">Convert Offline</string>
    <string name="btc_usd" translatable="false">BTC - USD</string>
    <string name="just_now">Just Now</string>
    <string name="eth_usd" translatable="false">ETH - USD</string>
    <string name="share">Share</string>
    <string name="notifications">Notifications</string>
    <string name="about_menu">About</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="rate_app">Rate App</string>
    <string name="exit_app">Exit App</string>
    <string name="help">Help</string>
    <string name="bitcoin_ethereum_news">Bitcoin/Ethereum News</string>
    <string name="offline">Convert offline</string>
    <string name="feedback">feedback</string>
    <string name="converter">Converter</string>
    <string name="tracker">Tracker</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="convert">Convert</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="waitt">Please wait......</string>


    <string name="withdraw">Withdraw</string>
    <string name="setup_wallet">Setup Wallet</string>
    <string name="mining_started">Mining started......Stay connected</string>
    <string name="_250">+250</string>
    <string name="tap_to_mine_btc">Tap to mine BTC</string>
    <string name="_300">+300</string>
    <string name="_350">+350</string>
    <string name="_400">+400</string>
    <string name="enter_wallet_address">Enter wallet address</string>
    <string name="save">Save</string>
    <string name="withdraw_bitcoin">Withdraw Bitcoin.....</string>
    <string name="you_can_withdraw_bitcoin_when_you_get_to_0_004_threashold">You can withdraw Bitcoin when you get to 0.004 threshold</string>
    <string name="payment_to_your_wallet_address_will_takes_3_days_maximum_to_arrive_please_ensure_you_enter_your_correct_valid_bitcoin_address_we_will_not_be_liable_for_any_failure_thank_you">Payment to your wallet address will takes 3 days maximum to arrive, please ensure you enter your correct valid bitcoin address and update the app before requesting for withdrawal, we will not be liable for any failure. Thank you</string>
    <string name="dismis">Dismiss</string>
    <string name="withdraws">Withdraw</string>
    <string name="sending_data">Sendiing Data</string>
    <string name="mining_stopped">Mining stopped</string>
    <string name="not_connectd">You are not connected</string>
    <string name="turn_on">Please turn on your data connection and retry</string>
    <string name="retryy">Retry</string>
    <string name="wallet">Please enter a wallet address</string>
    <string name="threashold">Sorry, you have not reached your threshold yet</string>
    <string name="mine_bitcoin">Mine Bitcoin</string>
    <string name="notmining">You are not mining Bitcoin.</string>
    <string name="miningfail">Mining failed, try again in 2 minutes</string>
    <string name="btcincrese">Bitcoin value increased</string>
    <string name="available">Bitcoin mining now available</string>
    <string name="title_activity_main5">Main5Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bitcoin_mining">Bitcoin Mining</string>
    <string name="convert_bitcoin">Convert Bitcoin</string>
    <string name="communicate">Communicate</string>
    <string name="send">Send</string>
</resources>
