<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_attach_money"
            android:title="@string/bitcoin_mining" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_phonelink"
            android:title="@string/convert_bitcoin" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_news"
            android:title="@string/bitcoin_ethereum_news" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_domain"
            android:title="@string/about_menu" />
        <item
            android:id="@+id/helpp"
            android:icon="@drawable/ic_live_help"
            android:title="@string/help_short" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
