<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="99"
        android:title="@string/notifications"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/remove"
        android:orderInCategory="99"
        android:title="@string/remove_ads"
        android:icon="@drawable/ic_visibility_off"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/rate"
        android:orderInCategory="101"
        android:title="@string/rate_app"
        android:icon="@drawable/ic_star"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/exit"
        android:orderInCategory="102"
        android:title="@string/exit_app"
        android:icon="@drawable/ic_exit"
        app:showAsAction="ifRoom" />


    <item
        android:icon="@drawable/ic_network"
        android:orderInCategory="103"
        android:title="@string/offline"
        android:id="@+id/offline"/>

</menu>