<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="30dp"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    android:weightSum="14"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/appimage"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_weight="3"
        android:padding="30dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bitcoinethereum" />


    <ProgressBar
        android:id="@+id/loadingbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateDuration="6000" />

    <View android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="10dp"></View>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:minHeight="20dp"
        android:text="@string/tracker"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:minHeight="20dp"
        android:text="@string/and"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:minHeight="20dp"
        android:text="@string/converter"/>













</LinearLayout>